Add ID annotator (#5)
* add id annotator

* add id annotator

* add id annotation tool

* add the id annotation tool

* add the id annotation tool

* update README

* delete libraries

* update docker-compose.yml

* Update server/openapi_server/__main__.py


* Update README.md
