# server/openapi_server/models/__init__.py
@@ -8,9 +8,9 @@ from openapi_server.models.health_check import HealthCheck
 from openapi_server.models.license import License
 from openapi_server.models.note import Note
 from openapi_server.models.text_annotation import TextAnnotation
-from openapi_server.models.text_date_annotation import TextDateAnnotation
-from openapi_server.models.text_date_annotation_all_of import TextDateAnnotationAllOf
-from openapi_server.models.text_date_annotation_request import TextDateAnnotationRequest
-from openapi_server.models.text_date_annotation_response import TextDateAnnotationResponse
+from openapi_server.models.text_id_annotation import TextIdAnnotation
+from openapi_server.models.text_id_annotation_all_of import TextIdAnnotationAllOf
+from openapi_server.models.text_id_annotation_request import TextIdAnnotationRequest
+from openapi_server.models.text_id_annotation_response import TextIdAnnotationResponse
 from openapi_server.models.tool import Tool
 from openapi_server.models.tool_dependencies import ToolDependencies
