# server/openapi_server/openapi/openapi.yaml
@@ -6,11 +6,11 @@ info:
     url: https://nlpsandbox.io
   description: |
     # Introduction
-    The Date Annotator is one of the first type of NLP Tools that can be benchmarked on [nlpsandbox.io](https://nlpsandbox.io). A Date Annotator takes as input a clinical note and outputs a list of predicted date annotations found in the clinical note. This OpenAPI document describes the specification of a Date Annotator. This specification includes the schemas of the input and output data, and the conditions that this annotator must meet if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
+    The ID Annotator is one of the first type of NLP Tools that can be benchmarked on [nlpsandbox.io](https://nlpsandbox.io). An ID Annotator takes as input a clinical note and outputs a list of predicted ID annotations found in the clinical note. This OpenAPI document describes the specification of a ID Annotator. This specification includes the schemas of the input and output data, and the conditions that this annotator must meet if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
     # Getting Started
-    The GitHub repository [nlpsandbox/date-annotator-example](https://github.com/nlpsandbox/date-annotator-example) provides a simple example implementation of a Python-Flask Date Annotator. By the end of the tutorial available in this repository, you will have built a Docker image for a simple Date Annotator. You will then be able to submit this image to [nlpsandbox.io](https://nlpsandbox.io) to benchmark its performance.
+    The GitHub repository (will be added later) [nlpsandbox/id-annotator-example](https://github.com/nlpsandbox/id-annotator-example) provides a simple example implementation of a Python-Flask ID Annotator. By the end of the tutorial available in this repository, you will have built a Docker image for a simple ID Annotator. You will then be able to submit this image to [nlpsandbox.io](https://nlpsandbox.io) to benchmark its performance.
     # Benchmarking Requirements
-    The following conditions must be met by your Date Annotator if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
+    The following conditions must be met by your ID Annotator if you want to benchmark its performance on [nlpsandbox.io](https://nlpsandbox.io).
     - The endpoint `/` must redirect to `/api/v1/tool`.
     - The endpoint `/ui` must redirect to the web interface (UI).
     - The output of this tool must be reproducible: a given input should always
@@ -21,12 +21,11 @@ info:
       this tool will not be able to connect to remote servers.
 
     # Examples
-    - [Date Annotator Example (Python)](https://github.com/nlpsandbox/date-annotator-example)
-    - [Date Annotator Example (Java)](https://github.com/nlpsandbox/date-annotator-example-java)
+    - [ID Annotator Example (Python)](https://github.com/nlpsandbox/id-annotator-example)
   license:
     name: Apache 2.0
     url: https://github.com/nlpsandbox/nlpsandbox-schemas/blob/develop/LICENSE
-  title: NLP Sandbox Date Annotator API
+  title: NLP Sandbox ID Annotator API
   version: 1.0.2
   x-logo:
     url: https://nlpsandbox.github.io/nlpsandbox-schemas/logo.png
@@ -36,8 +35,8 @@ servers:
 tags:
 - description: Operations about health checks
   name: HealthCheck
-- description: Operations about text date annotations
-  name: TextDateAnnotation
+- description: Operations about text ID annotations
+  name: TextIdAnnotation
 - description: Operations about this tool
   name: Tool
 paths:
@@ -69,21 +68,21 @@ paths:
       tags:
       - HealthCheck
       x-openapi-router-controller: openapi_server.controllers.health_check_controller
-  /textDateAnnotations:
+  /textIdAnnotations:
     post:
-      description: Return the date annotations found in a clinical note
-      operationId: create_text_date_annotations
+      description: Return the ID annotations found in a clinical note
+      operationId: create_text_id_annotations
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TextDateAnnotationRequest'
+              $ref: '#/components/schemas/TextIdAnnotationRequest'
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/TextDateAnnotationResponse'
+                $ref: '#/components/schemas/TextIdAnnotationResponse'
           description: Success
         "400":
           content:
@@ -98,10 +97,10 @@ paths:
                 $ref: '#/components/schemas/Error'
           description: The request cannot be fulfilled due to an unexpected server
             error
-      summary: Annotate dates in a clinical note
+      summary: Annotate IDs in a clinical note
       tags:
-      - TextDateAnnotation
-      x-openapi-router-controller: openapi_server.controllers.text_date_annotation_controller
+      - TextIdAnnotation
+      x-openapi-router-controller: openapi_server.controllers.text_id_annotation_controller
   /tool:
     get:
       description: Get information about the tool
@@ -190,29 +189,36 @@ components:
           - pass
           - fail
           - warn
+          title: status
           type: string
       required:
       - status
+      title: HealthCheck
       type: object
     Error:
       description: Problem details (tools.ietf.org/html/rfc7807)
       properties:
         title:
           description: A human readable documentation for the problem type
+          title: title
           type: string
         status:
           description: The HTTP status code
+          title: status
           type: integer
         detail:
           description: A human readable explanation specific to this occurrence of
             the problem
+          title: detail
           type: string
         type:
           description: An absolute URI that identifies the problem type
+          title: type
           type: string
       required:
       - status
       - title
+      title: Error
       type: object
     NoteId:
       description: The ID of the clinical note
@@ -261,9 +267,10 @@ components:
       - patientId
       - text
       - type
+      title: Note
       type: object
-    TextDateAnnotationRequest:
-      description: A request to annotate dates in a clinical note
+    TextIdAnnotationRequest:
+      description: A request to annotate IDs in a clinical note
       example:
         note:
           identifier: awesome-note
@@ -305,40 +312,43 @@ components:
       - start
       - text
       type: object
-    TextDateAnnotation:
+    TextIdAnnotation:
       allOf:
       - $ref: '#/components/schemas/TextAnnotation'
-      - $ref: '#/components/schemas/TextDateAnnotation_allOf'
-      description: A date annotation in a text
+      - $ref: '#/components/schemas/TextIdAnnotation_allOf'
+      description: An ID annotation in a text
       example:
         start: 42
-        length: 10
-        text: 10/26/2020
-        dateFormat: MM/DD/YYYY
+        length: 11
+        text: 203-11-4535
+        idType: ssn
         confidence: 95.5
+      title: TextIdAnnotation
       type: object
-    TextDateAnnotationResponse:
-      description: The response to a dates annotation request
+    TextIdAnnotationResponse:
+      description: The response to an ID annotation request
       example:
-        textDateAnnotations:
+        textIdAnnotations:
         - start: 42
-          length: 10
-          text: 10/26/2020
-          dateFormat: MM/DD/YYYY
+          length: 11
+          text: 203-11-4535
+          idType: ssn
           confidence: 95.5
         - start: 42
-          length: 10
-          text: 10/26/2020
-          dateFormat: MM/DD/YYYY
+          length: 11
+          text: 203-11-4535
+          idType: ssn
           confidence: 95.5
       properties:
-        textDateAnnotations:
-          description: A list of date annotations
+        textIdAnnotations:
+          description: A list of ID annotations
           items:
-            $ref: '#/components/schemas/TextDateAnnotation'
+            $ref: '#/components/schemas/TextIdAnnotation'
+          title: textIdAnnotations
           type: array
       required:
-      - textDateAnnotations
+      - textIdAnnotations
+      title: TextIdAnnotationResponse
       type: object
     License:
       description: The license (license keyword used by GitHub)
@@ -379,6 +389,7 @@ components:
       - zlib
       - none
       example: apache-2.0
+      title: License
       type: string
     ToolType:
       description: The type of this tool
@@ -455,6 +466,7 @@ components:
       - type
       - url
       - version
+      title: Tool
       type: object
     ToolDependencies:
       description: A list of tool dependencies
@@ -485,14 +497,25 @@ components:
           description: A list of tools
           items:
             $ref: '#/components/schemas/Tool'
+          title: toolDependencies
           type: array
       required:
       - toolDependencies
+      title: ToolDependencies
       type: object
-    TextDateAnnotation_allOf:
+    TextIdAnnotation_allOf:
       properties:
-        dateFormat:
-          description: Date format (ISO 8601)
-          example: MM/DD/YYYY
+        idType:
+          description: Type of ID information
+          enum:
+          - account
+          - bio_id
+          - device
+          - health_plan
+          - id_num
+          - license
+          - medical_record
+          - ssn
+          - vehicle
           type: string
       type: object
